[tool.poetry]
name = "pyro"
version = "0.1.0"
description = "Python roguelike"
authors = ["Daniel Kertesz <daniel@spatof.org>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
tcod = "^8.3"
noise = "^1.2"
jedi = "^0.13.2"
rope = "^0.11.0"

[tool.poetry.dev-dependencies]
modernize = "^0.6.1"
pip = "^18.1"
pylint = "^2.2"
pycodestyle = "^2.4"
pytest = "^4.0"
see = "^1.4"
better_exceptions = "^0.2.1"
black = { version = "18.9b0", python = "^3.6" }

[tool.poetry.scripts]
pyro = "pyro.main:run"

[tool.black]
line-length = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

